# SoftEngine

./: .gitignore  CMakeLists.txt  README.md
SoftwareRenderer/: SoftwareRenderer.sln
SoftwareRenderer/SoftRenderer/: SoftRenderer.aps  SoftRenderer.rc  SoftRenderer.vcxproj  SoftRenderer.vcxproj.filters  WindowsApp.h  WindowsMain.cpp
SoftwareRenderer/SoftRenderer/Debug/: vc142.idb
SoftwareRenderer/SoftRenderer/Debug/SoftRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SoftRenderer.lastbuildstate
SoftwareRenderer/SoftRenderer/x64/Debug/: SoftRenderer.exe.recipe  SoftRenderer.ilk  SoftRenderer.res  vc142.idb
SoftwareRenderer/SoftRenderer/x64/Debug/SoftRenderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SoftRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
src/: PreCompiled.h
src/Module/MathModule/: CMakeLists.txt  test.cpp  test.h
src/Module/RenderModule/: CMakeLists.txt  testB.cpp  testB.h
src/Program/: WindowsMain.cpp  resource.h
src/Windows/: WindowsApp.h
